Changelog
=========


2.1.2 - unreleased
------------------

- Fixed: When two or more objects are initialized during the same request,
  'Object added' content rule handler is executed only once.
  Refs https://dev.plone.org/plone/ticket/11706.
  [thomasdesvenain]

- Add MANIFEST.in.
  [WouterVH]

- Internationalization fix on local rules management screen.
  [thomasdesvenain]

- Use site_url instead of deprecated portal_url.
  [WouterVH]

- Code cleanup and some PEP8.
  [WouterVH]


2.1.1 - 2011-04-03
------------------

- Dynamic behavior is fixed on rules controlpanel, including rules list filter.
  Refs http://dev.plone.org/plone/ticket/10831.
  [thomasdesvenain]


2.1.0 - 2011-01-03
------------------

- Depend on ``Products.CMFPlone`` instead of ``Plone``.
  [elro]

- Use plone.uuid to look up content UUIDs.
  [toutpt, davisagli]

- Protect content rules management views using the
  "Content rules: Manage rules" permission, instead of the generic
  "Manage portal".
  [davisagli]

- Do not force to send mails in same transaction if mail queuing is on.
  [thomasdesvenain]


2.0.6 - 2011-01-03
------------------

- Protect content rules management views using the
  "Content rules: Manage rules" permission, instead of the generic
  "Manage portal".
  [davisagli]

- Do not force to send mails in same transaction if mail queuing is on.
  [thomasdesvenain]


2.0.5 - 2010-11-06
------------------

- Added TALES expression condition. This closes
  http://dev.plone.org/plone/ticket/9939.
  [thomasdesvenain]


2.0.4 - 2010-10-27
------------------

- Added missing ``</thead>`` tag.
  [swampmonkey]

- Fixed typo on logger message field description.
  [thomasdesvenain]


2.0.3 - 2010-09-28
------------------

- Internationalize event trigger types.
  [thomasdesvenain]

- Added user login variable '&u' to use in logger action message template.
  [thomasdesvenain]


2.0.2 - 2010-09-20
------------------

- Internationalize some values on management pages.